--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,28 @@
+aiofiles==23.2.1
 aiohttp==3.9.5
 aiosignal==1.3.1
 attrs==23.2.0
 AutoChromedriver==2.2.1
 beautifulsoup4==4.12.3
+blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.3
 frozenlist==1.4.1
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+Hypercorn==0.16.0
+hyperframe==6.0.1
 idna==3.7
 instaloader==4.11
+itsdangerous==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
 multidict==6.0.5
 outcome==1.3.0.post0
+priority==2.0.0
 PySocks==1.7.1
 pyTelegramBotAPI==4.17.0
 python-i18n==0.3.9
@@ -27,5 +39,6 @@ trio==0.25.0
 trio-websocket==0.11.1
 typing_extensions==4.11.0
 urllib3==2.2.1
+Werkzeug==3.0.2
 wsproto==1.2.0
 yarl==1.9.4
