--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ AutoChromedriver==2.2.1
 beautifulsoup4==4.12.3
 blinker==1.7.0
 certifi==2024.2.2
+cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
+distlib==0.3.8
+filelock==3.13.4
 Flask==3.0.3
 frozenlist==1.4.1
 h11==0.14.0
@@ -15,16 +18,24 @@ h2==4.1.0
 hpack==4.0.0
 Hypercorn==0.16.0
 hyperframe==6.0.1
+identify==2.5.36
 idna==3.7
+iniconfig==2.0.0
 instaloader==4.11
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 multidict==6.0.5
+nodeenv==1.8.0
 outcome==1.3.0.post0
+packaging==24.0
+platformdirs==4.2.0
+pluggy==1.5.0
+pre-commit==3.7.0
 priority==2.0.0
 PySocks==1.7.1
 pyTelegramBotAPI==4.17.0
+pytest==8.1.1
 python-i18n==0.3.9
 pytube==15.0.0
 PyYAML==6.0.1
@@ -39,6 +50,7 @@ trio==0.25.0
 trio-websocket==0.11.1
 typing_extensions==4.11.0
 urllib3==2.2.1
+virtualenv==20.25.3
 Werkzeug==3.0.2
 wsproto==1.2.0
 yarl==1.9.4
